--- a/SimBeacon/Base.lproj/Main.storyboard
+++ b/SimBeacon/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                 </connections>
                             </switch>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.92549019607843142" green="0.94117647058823528" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="61k-OS-DC9" firstAttribute="top" secondItem="pVO-PS-OdD" secondAttribute="bottom" constant="20" id="0o1-Ux-EiH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4sD-gB-Ay9" secondAttribute="trailing" constant="10" id="2cN-pM-fce"/>
