--- a/SimBeacon/Base.lproj/Main.storyboard
+++ b/SimBeacon/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x5x-3a-Myh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x5x-3a-Myh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,13 +28,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Major" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QhU-hX-0O7">
-                                <rect key="frame" x="26" y="98" width="323" height="30"/>
+                                <rect key="frame" x="26" y="102" width="323" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Minor" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4sD-gB-Ay9">
-                                <rect key="frame" x="26" y="136" width="323" height="30"/>
+                                <rect key="frame" x="26" y="144" width="323" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
@@ -48,44 +47,43 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVO-PS-OdD">
-                                <rect key="frame" x="26" y="211.5" width="323" height="409.5"/>
+                                <rect key="frame" x="26" y="222" width="323" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember Settings " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fbx-Rc-KO5">
-                                <rect key="frame" x="46" y="176" width="155.5" height="20.5"/>
+                                <rect key="frame" x="26" y="186" width="195.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eRT-pp-rkK">
-                                <rect key="frame" x="280" y="170.5" width="51" height="31"/>
+                                <rect key="frame" x="300" y="181" width="51" height="31"/>
                                 <connections>
                                     <action selector="saveSettingsToggled:" destination="x5x-3a-Myh" eventType="valueChanged" id="bbX-J6-mwp"/>
                                 </connections>
                             </switch>
                         </subviews>
-                        <color key="backgroundColor" red="0.92549019607843142" green="0.94117647058823528" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="61k-OS-DC9" firstAttribute="top" secondItem="pVO-PS-OdD" secondAttribute="bottom" constant="6" id="0o1-Ux-EiH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4sD-gB-Ay9" secondAttribute="trailing" constant="10" id="2cN-pM-fce"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Evc-Ub-CwE" secondAttribute="trailing" constant="10" id="3wG-Jm-631"/>
-                            <constraint firstItem="fbx-Rc-KO5" firstAttribute="top" secondItem="4sD-gB-Ay9" secondAttribute="bottom" constant="10" id="4ej-Po-O4f"/>
+                            <constraint firstItem="fbx-Rc-KO5" firstAttribute="top" secondItem="4sD-gB-Ay9" secondAttribute="bottom" constant="12" id="4ej-Po-O4f"/>
                             <constraint firstItem="eRT-pp-rkK" firstAttribute="leading" secondItem="fbx-Rc-KO5" secondAttribute="trailing" constant="78.5" id="5YS-M7-EU0"/>
-                            <constraint firstItem="QhU-hX-0O7" firstAttribute="top" secondItem="Evc-Ub-CwE" secondAttribute="bottom" constant="8" id="62F-74-bcI"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="eRT-pp-rkK" secondAttribute="trailing" constant="30" id="66a-2D-B7A"/>
+                            <constraint firstItem="QhU-hX-0O7" firstAttribute="top" secondItem="Evc-Ub-CwE" secondAttribute="bottom" constant="12" id="62F-74-bcI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eRT-pp-rkK" secondAttribute="trailing" constant="10" id="66a-2D-B7A"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pVO-PS-OdD" secondAttribute="trailing" constant="10" id="70r-Fa-NYR"/>
                             <constraint firstItem="pVO-PS-OdD" firstAttribute="top" secondItem="eRT-pp-rkK" secondAttribute="bottom" constant="10" id="ATi-XC-u4d"/>
                             <constraint firstItem="Evc-Ub-CwE" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="D9u-R3-VQa"/>
                             <constraint firstAttribute="trailingMargin" secondItem="61k-OS-DC9" secondAttribute="trailing" constant="10" id="DeX-cG-IbL"/>
                             <constraint firstItem="QhU-hX-0O7" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="LHY-cu-L7C"/>
                             <constraint firstItem="vzU-6h-I1F" firstAttribute="top" secondItem="61k-OS-DC9" secondAttribute="bottom" constant="10" id="RKf-qq-Ywr"/>
-                            <constraint firstItem="4sD-gB-Ay9" firstAttribute="top" secondItem="QhU-hX-0O7" secondAttribute="bottom" constant="8" id="UwO-Pm-qUC"/>
+                            <constraint firstItem="4sD-gB-Ay9" firstAttribute="top" secondItem="QhU-hX-0O7" secondAttribute="bottom" constant="12" id="UwO-Pm-qUC"/>
                             <constraint firstItem="Evc-Ub-CwE" firstAttribute="top" secondItem="JSy-zp-DGY" secondAttribute="bottom" constant="40" id="aYl-WF-mlW"/>
                             <constraint firstItem="61k-OS-DC9" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="bKk-7x-p8d"/>
                             <constraint firstItem="pVO-PS-OdD" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="cVe-04-tZx"/>
-                            <constraint firstItem="fbx-Rc-KO5" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="30" id="dwF-30-Iju"/>
+                            <constraint firstItem="fbx-Rc-KO5" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="dwF-30-Iju"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QhU-hX-0O7" secondAttribute="trailing" constant="10" id="ee6-zZ-mrN"/>
                             <constraint firstItem="4sD-gB-Ay9" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="nlW-gi-2do"/>
                             <constraint firstItem="fbx-Rc-KO5" firstAttribute="centerY" secondItem="eRT-pp-rkK" secondAttribute="centerY" id="uAU-wY-Wfl"/>
