--- a/SimBeacon/Base.lproj/Main.storyboard
+++ b/SimBeacon/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVO-PS-OdD">
-                                <rect key="frame" x="26" y="222" width="323" height="20.5"/>
+                                <rect key="frame" x="26" y="222" width="323" height="353"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -64,13 +64,22 @@
                                     <action selector="saveSettingsToggled:" destination="x5x-3a-Myh" eventType="valueChanged" id="bbX-J6-mwp"/>
                                 </connections>
                             </switch>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgX-8v-kWf">
+                                <rect key="frame" x="26" y="585" width="323" height="30"/>
+                                <state key="normal" title="Generate UUID"/>
+                                <connections>
+                                    <action selector="generateUUIDAction:" destination="x5x-3a-Myh" eventType="touchUpInside" id="BH3-6Q-Nfn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="4sD-gB-Ay9" secondAttribute="trailing" constant="10" id="2cN-pM-fce"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Evc-Ub-CwE" secondAttribute="trailing" constant="10" id="3wG-Jm-631"/>
+                            <constraint firstItem="NgX-8v-kWf" firstAttribute="top" secondItem="pVO-PS-OdD" secondAttribute="bottom" constant="10" id="4Iw-pR-CM7"/>
                             <constraint firstItem="fbx-Rc-KO5" firstAttribute="top" secondItem="4sD-gB-Ay9" secondAttribute="bottom" constant="12" id="4ej-Po-O4f"/>
                             <constraint firstItem="eRT-pp-rkK" firstAttribute="leading" secondItem="fbx-Rc-KO5" secondAttribute="trailing" constant="78.5" id="5YS-M7-EU0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NgX-8v-kWf" secondAttribute="trailing" constant="10" id="5is-EG-8nD"/>
                             <constraint firstItem="QhU-hX-0O7" firstAttribute="top" secondItem="Evc-Ub-CwE" secondAttribute="bottom" constant="12" id="62F-74-bcI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eRT-pp-rkK" secondAttribute="trailing" constant="10" id="66a-2D-B7A"/>
                             <constraint firstAttribute="trailingMargin" secondItem="pVO-PS-OdD" secondAttribute="trailing" constant="10" id="70r-Fa-NYR"/>
@@ -81,12 +90,14 @@
                             <constraint firstItem="vzU-6h-I1F" firstAttribute="top" secondItem="61k-OS-DC9" secondAttribute="bottom" constant="10" id="RKf-qq-Ywr"/>
                             <constraint firstItem="4sD-gB-Ay9" firstAttribute="top" secondItem="QhU-hX-0O7" secondAttribute="bottom" constant="12" id="UwO-Pm-qUC"/>
                             <constraint firstItem="Evc-Ub-CwE" firstAttribute="top" secondItem="JSy-zp-DGY" secondAttribute="bottom" constant="40" id="aYl-WF-mlW"/>
+                            <constraint firstItem="61k-OS-DC9" firstAttribute="top" secondItem="NgX-8v-kWf" secondAttribute="bottom" constant="12" id="abD-5v-iE0"/>
                             <constraint firstItem="61k-OS-DC9" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="bKk-7x-p8d"/>
                             <constraint firstItem="pVO-PS-OdD" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="cVe-04-tZx"/>
                             <constraint firstItem="fbx-Rc-KO5" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="dwF-30-Iju"/>
                             <constraint firstAttribute="trailingMargin" secondItem="QhU-hX-0O7" secondAttribute="trailing" constant="10" id="ee6-zZ-mrN"/>
                             <constraint firstItem="4sD-gB-Ay9" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="nlW-gi-2do"/>
                             <constraint firstItem="fbx-Rc-KO5" firstAttribute="centerY" secondItem="eRT-pp-rkK" secondAttribute="centerY" id="uAU-wY-Wfl"/>
+                            <constraint firstItem="NgX-8v-kWf" firstAttribute="leading" secondItem="0bV-mH-FbS" secondAttribute="leadingMargin" constant="10" id="zzj-ND-goH"/>
                         </constraints>
                     </view>
                     <connections>
